remove rapids as it is not supported after testing

--- a/genex_simulation_data (main) Batch only.ipynb
+++ b/genex_simulation_data (main) Batch only.ipynb
@@ -2185,7 +2185,7 @@
    "source": [
     "sc.pp.neighbors(adata, use_rep='X_pca', n_neighbors=30)\n",
     "# sc.external.pp.bbknn(adata_all, batch_key='batch', use_rep='X_latent')\n",
-    "sc.tl.umap(adata, method = \"rapids\")"
+    "sc.tl.umap(adata)"
    ]
   },
   {
